# device_soc_hpmicro

./: .gitmodules  BUILD.gn  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  OAT.xml  README.en.md  README.md
drivers/: BUILD.gn
drivers/platform/: BUILD.gn  ewatchdog.c  gpio.c  i2c.c  spi.c  uart.c  watchdog.c
hals/: BUILD.gn
hcs/config_template/: gpio.hcs  i2c.hcs  spi.hcs  uart.hcs  watchdog.hcs
hcs/hpm5300/: hpm5361.hcs
hcs/hpm6200/: hpm6280.hcs
hcs/hpm6300/: hpm6360.hcs
hcs/hpm6700/: hpm6700.hcs  hpm6730.hcs  hpm6750.hcs
hcs/hpm6800/: hpm6880.hcs
hpm5300/: BUILD.gn  Kconfig.liteos_m.defconfig.hpm5300  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
hpm5300/liteos_m/: BUILD.gn
hpm6200/: BUILD.gn  Kconfig.liteos_m.defconfig.hpm6280  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
hpm6200/hals/update/: BUILD.gn
hpm6200/liteos_m/: BUILD.gn  los_start.S
hpm6300/: Kconfig.liteos_m.defconfig.hpm6360  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
hpm6300/liteos_m/: BUILD.gn  main.c  soc.h
hpm6700/: BUILD.gn  Kconfig.liteos_m.defconfig.hpm6730  Kconfig.liteos_m.defconfig.hpm6750  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
hpm6700/hals/update/: hal_hota_board.c
hpm6700/liteos_m/: BUILD.gn  adapter.c  adapter.h  dprintf.c  los_start.S  main.c  riscv_hal.c  riscv_hal.h  soc.h  target_config.h
hpm6700/liteos_m/driver/: plic.c  plic.h
hpm6700/liteos_m/libc/: dprintf.c
hpm6700/sdk/: BUILD.gn
hpm6800/: Kconfig.liteos_m.defconfig.hpm6880  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
hpm6800/liteos_m/: BUILD.gn  adapter.c  dprintf.c  los_start.S
sdk/: BUILD.gn  clean_sdk.sh  install_sdk.sh
sdk/hpm_sdk/: .gitignore  CMakeLists.txt
sdk/hpm_sdk/components/: CMakeLists.txt
sdk/hpm_sdk/middleware/: CMakeLists.txt
(+370 files in other folders)
